# Project-I

./: .gitignore
Project_I/: CLAUDE.md  Using Machine Learning to find power consumtion regimes.pptx  pyproject.toml  ~$Using Machine Learning to find power consumtion regimes.pptx
Project_I/experiments/: Untitled-1.ipynb  clean_data.py  hierarchical_regime_clustering.py  regime_clustering.py  regime_models.py  topdown_regime_clustering.py
Project_I/notebooks/: 02_weekly_regime_clustering.ipynb  03_daily_regime_clustering.ipynb  energy_data_profile.html
Project_I/src/project_i/: calendar.py  cluster_eval.py  data_loader.py  regime_forecast.py
